# proj-game-klai-kriad

./: .env.example  .gitignore  CLAUDE.md  GAME_DESIGN_DOCUMENTATION.md  README.md  main.py  pyproject.toml
detection/: base_strategy.py  detection_config.py  fusion_detector.py
detection/accelerometer/: accelerometer_strategy.py  motion_analyzer.py  sensor_server.py
detection/pose/: pose_analyzer.py  pose_strategy.py
docs/: 00-architecture.md  01-main-py.md  02-fusion-detector.md  03-accelerometer-strategy.md  04-pose-strategy.md  05-accelerometer-vs-pose.md  06-event-manager-simplified.md  06-event-manager.md  07-game-state.md  08-ui-manager.md  09-summary.md  evaluation-guide.md  evaluation-system-plan.md  integrate-accelerometer.txt
evaluation/: __init__.py  compare_ground_truth.py  recording_config.py  recording_manager.py
game/: event_manager.py  game_config.py  game_state.py  ui_manager.py
templates/: index.html
