[project]
name = "proj-game-klai-kriad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
]
